--- a/src/main/resources/config/application-prod.yml
+++ b/src/main/resources/config/application-prod.yml
@@ -57,6 +57,21 @@ spring:
   thymeleaf:
     cache: true
 
+protel:
+  datasource:
+    type: com.zaxxer.hikari.HikariDataSource
+    url: jdbc:sqlserver://localhost:1433;database=protel
+    username: RO_DB_USEER
+    password: '!QAZxsw2@Lhdc'
+    hikari:
+      poolName: Hikari
+      auto-commit: false
+      data-source-properties:
+        cachePrepStmts: true
+        prepStmtCacheSize: 250
+        prepStmtCacheSqlLimit: 2048
+        useServerPrepStmts: true
+
 # ===================================================================
 # To enable TLS in production, generate a certificate using:
 # keytool -genkey -alias elsa -storetype PKCS12 -keyalg RSA -keysize 2048 -keystore keystore.p12 -validity 3650
