--- a/src/test/resources/config/application.yml
+++ b/src/test/resources/config/application.yml
@@ -21,24 +21,35 @@ spring:
     name: Elsa
   datasource:
     type: com.zaxxer.hikari.HikariDataSource
-    url: jdbc:h2:mem:Elsa;DB_CLOSE_DELAY=-1;DB_CLOSE_ON_EXIT=FALSE
-    name:
-    username:
-    password:
+    url: jdbc:sqlserver://localhost:1433;database=Elsa_Trial
+    username: Elsa.trial
+    password: Elsa@Trial
     hikari:
+      poolName: Hikari
       auto-commit: false
+      data-source-properties:
+        cachePrepStmts: true
+        prepStmtCacheSize: 250
+        prepStmtCacheSqlLimit: 2048
+        useServerPrepStmts: true
   jackson:
     serialization:
       write-durations-as-timestamps: false
+  data:
+    elasticsearch:
+      properties:
+        node:
+          max_local_storage_nodes: 2
   jpa:
-    database-platform: io.github.jhipster.domain.util.FixedH2Dialect
+    database-platform: org.hibernate.dialect.SQLServer2012Dialect
     open-in-view: false
-    show-sql: false
+    show-sql: true
     hibernate:
       ddl-auto: none
       naming:
         physical-strategy: org.springframework.boot.orm.jpa.hibernate.SpringPhysicalNamingStrategy
         implicit-strategy: org.springframework.boot.orm.jpa.hibernate.SpringImplicitNamingStrategy
+
     properties:
       hibernate.id.new_generator_mappings: true
       hibernate.connection.provider_disables_autocommit: true
